--- a/app/views/public/shared/_floating_contact_icons.html.erb
+++ b/app/views/public/shared/_floating_contact_icons.html.erb
@@ -9,6 +9,6 @@
   
   <%= link_to "tel:+33493451717", class: "floating-icon-btn", title: "Nous appeler" do %>
     <i class="bi bi-telephone"></i>
+    <span class="floating-phone-tooltip">+33 4 93 45 17 17</span>
   <% end %>
 </div>
-
