--- a/app/views/public/pages/produit.html.erb
+++ b/app/views/public/pages/produit.html.erb
@@ -1,5 +1,5 @@
 <div class="public-main-content bg-white text-dark">
-  <div class="container-fluid py-2 px-4">
+  <div class="container-fluid produit-container py-2 px-4">
     <!-- Lien de retour -->
     <% if request.referer.present? %>
       <div class="mb-1">
@@ -59,12 +59,12 @@
             </div>
           <% end %>
 
+          <hr>
           <!-- Other sizes -->
           <% if @meme_produit_meme_couleur_autres_tailles.any? %>
             <div class="mb-2 fs-3">
-              <h6 class="mb-2 d-flex align-items-center">
-                <i class="bi bi-rulers me-2"></i>
-                <span class="fw-bold">Autres tailles disponibles</span>
+              <h6 class="mb-2 d-flex align-items-center text-secondary">
+                <span>Autres tailles disponibles</span>
               </h6>
               <div class="d-flex flex-wrap gap-2">
                 <% @meme_produit_meme_couleur_autres_tailles.each do |produit| %>
@@ -76,10 +76,9 @@
 
           <!-- Other colors -->
           <% if @meme_produit_meme_taille_autres_couleurs.any? %>
-            <div class="mb-2 fs-3">
-              <h6 class="mb-3 d-flex align-items-center">
-                <i class="bi bi-palette me-2"></i>
-                <span class="fw-bold">Autres couleurs disponibles</span>
+            <div class="my-3 fs-3">
+              <h6 class="mb-2 d-flex align-items-center text-secondary">
+                <span>Autres couleurs disponibles</span>
               </h6>
               <div class="d-flex flex-wrap gap-2">
                 <% @meme_produit_meme_taille_autres_couleurs.each do |produit| %>
