--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-xxl bg-black shadow-sm fixed-top py-3">
-  <div class="container-fluid ps-2 pe-3 align-items-center justify-content-between">
+<nav class="navbar navbar-expand-xxl bg-black shadow-sm fixed-top py-2">
+  <div class="container-fluid ps-2 pe-3 d-flex align-items-center justify-content-between">
     <div class="d-flex align-items-center gap-2">
       <%= link_to root_url do %>
-        <%= image_tag('/images/a1soirlogo2.png', class: 'mb-0 px-2 navbar-logo', alt: "Logo") %>
+        <%= image_tag('/images/a1soirlogo2.png', class: 'navbar-logo mb-0 px-2 me-2', alt: "Logo") %>
       <% end %>
 
       <%= link_to "#{rdv_url(subdomain: "shop")}#rdv-form",
@@ -18,8 +18,8 @@
       </button>
     </div>
 
-    <div class="collapse navbar-collapse order-xl-1" id="navbar">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+    <div class="collapse navbar-collapse order-xl-1 p-0" id="navbar">
+      <ul class="navbar-nav ms-auto mb-0 p-0 align-items-center">
         <!-- Bouton RDV dans le menu mobile -->
         <li class="nav-item text-center my-3 d-xxl-none">
           <%= link_to "#{rdv_url(subdomain: "shop")}#rdv-form",
