--- a/app/views/admin/produits/index.turbo_stream.erb
+++ b/app/views/admin/produits/index.turbo_stream.erb
@@ -12,6 +12,7 @@
               filter_couleur: params[:filter_couleur], 
               filter_categorie: params[:filter_categorie],
               filter_statut: params[:filter_statut],
+              filter_fournisseur: params[:filter_fournisseur],
               filter_mode: params[:filter_mode],
               sort: params[:sort], 
               q: params[:q]&.to_unsafe_h,
