--- a/app/views/public/pages/produit.html.erb
+++ b/app/views/public/pages/produit.html.erb
@@ -100,9 +100,21 @@
       </div>
     </div>
   </div>
+  
+  <% if session[:from_cabine] && @cabine_cart.any? %>
+    <%= render partial: "public/pages/floating_reservation_button" %>
+  <% end %>
+
 </div>
 
 
 <%= render partial: "product_gallery_modal", locals: { produit: @produit } %>
 
 <%= render partial: "public/pages/vous_aimerez_aussi", locals: { produits_similaires: @produits_similaires } %>
+
+
+<div class="text-center"> 
+  <%= link_to produits_index_path(from_cabine: true), class: "btn btn-dark btn-lg px-4 rounded-0" do %>
+    <i class="bi bi-plus-circle me-2"></i>Ajouter d'autres produits
+  <% end %>
+</div>
