--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-xxl bg-black shadow-sm fixed-top py-2">
   <div class="container-fluid ps-2 pe-3 d-flex align-items-center justify-content-between">
-    <div class="d-flex align-items-center gap-2">
+    <div class="d-flex align-items-center">
       <%= link_to root_url do %>
         <%= image_tag('/images/a1soirlogo2.png', class: 'navbar-logo mb-0 px-2 me-2', alt: "Logo") %>
       <% end %>
@@ -12,7 +12,7 @@
       <% end %>
     </div>
 
-    <div class="d-flex align-items-center gap-3 order-xl-2 ms-auto">
+    <div class="d-flex align-items-center order-xl-2 ms-auto">
       <button class="navbar-toggler border-0 p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <i class="bi bi-list text-light" style="font-size: 1.75rem;"></i>
       </button>
