--- a/app/views/admin/shared/_navbar_admin.html.erb
+++ b/app/views/admin/shared/_navbar_admin.html.erb
@@ -1,8 +1,8 @@
 
-<nav class="navbar navbar-admin navbar-light bg-light fixed-top navbar-expand-xxl navbar-fixed-height py-0">
-  <div class="container-fluid ps-3 pe-3 py-0 d-flex align-items-center justify-content-between">
+<nav class="navbar navbar-admin navbar-light bg-light navbar-expand-xxl navbar-fixed-height py-0">
+  <div class="container-fluid px-3 py-0 d-flex align-items-center justify-content-between">
     <%= link_to image_tag('/images/logo_courant_public.png', class: 'navbar-brand mb-0', width: "180"), admin_root_path %>
-    <button class="navbar-toggler ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar" aria-controls="adminNavbar" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar" aria-controls="adminNavbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="adminNavbar">
