--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-xxl bg-black shadow-sm fixed-top py-2">
+<nav class="navbar navbar-expand-xxl bg-black shadow-sm py-2">
   <div class="container-fluid ps-2 pe-3 d-flex align-items-center justify-content-between">
     <div class="d-flex align-items-center">
       <%= link_to root_url do %>
