--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <div class="collapse navbar-collapse order-xl-1 p-0" id="navbar">
-      <ul class="navbar-nav ms-auto mb-0 p-0 align-items-center">
+      <ul class="navbar-nav ms-auto mb-0 p-0 align-items-center gap-2">
         <!-- Bouton RDV dans le menu mobile -->
         <li class="nav-item text-center my-3 d-xxl-none">
           <%= link_to "#{rdv_url(subdomain: "shop")}#rdv-form",
